Fixed mobile footer word overlapping

--- a/sources/scss/_footer.scss
+++ b/sources/scss/_footer.scss
@@ -23,14 +23,16 @@
   border-bottom: #bbc7cc 1px solid;
 }
 
+.copyright
 .poweredby {
   position: absolute;
   top: 1rem;
-  left: 15px;
 }
 
 .copyright {
-  position: absolute;
-  top: 1rem;
+  left: 15px;
+}
+
+.poweredby {
   right: 15px;
 }
