--- a/sources/scss/_media-queries-mobile.scss
+++ b/sources/scss/_media-queries-mobile.scss
@@ -188,6 +188,12 @@
   .site-footer {
     margin-top: 3rem;
   }
+
+  .copyright
+  .poweredby {
+    position: static;
+  }
+
   .author-profile {
     padding-bottom: 2rem;
   }
